--- a/BitsandPizzas/app/src/main/res/values/strings.xml
+++ b/BitsandPizzas/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="order_fragment_text">This is the order fragment.</string>
+    <string name="delicious_pizza">Delicious Pizza</string>
 </resources>
